@@ -23,6 +23,7 @@ Contributors in alphabetical order:
 	Johan Jansson		<johanjan@math.chalmers.se>
 	Anders Logg		<logg@math.chalmers.se>
 	Karin Kraft		<kakr@math.chalmers.se>
+        Thomas Svedberg		<thsv@am.chalmers.se>
 	Erik Svensson		<eriksv@math.chalmers.se>
 	Jim Tilander		<jt@dd.chalmers.se>
 	Walter Villanueva	<PDE project course 2001/2002>
