@@ -30,7 +30,7 @@ void dGqMethods::init(unsigned int q)
   // Check if we need to increase the size of the list
   if ( (q+1) > size )
   {
-    dGqMethod** new_methods = new (dGqMethod*)[q+1];
+    dGqMethod** new_methods = new dGqMethod*[q+1];
     for (unsigned int i = 0; i < (q+1); i++)
       new_methods[i] = 0;
     for (unsigned int i = 0; i < size; i++)
